<resources>
    <string name="app_name">PawsitiveLife</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- fragment_my_dogs -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hi_noa">Hi Noa,</string>
    <string name="your_pack_is_happy_to_see_you">Your pack is happy to see you!</string>
    <string name="your_pack">Your pack</string>
    <string name="chubbie">Chubbie</string>
    <string name="_1_year">1 year</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="see_all">See all</string>
    <string name="sterilization">Sterilization</string>
    <string name="dogs_name_hint">Dog\'s Name</string>
    <string name="age">Age</string>
    <string name="choose_breed">Choose Breed</string>
    <string name="breed">Breed</string>
    <string name="age_lbl">Age</string>
    <string name="female">Female</string>
    <string name="gender">Gender</string>
    <string name="save">save</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="gender_icon">Gender Icon</string>
    <string name="add_dog_icon">Add Dog</string>
    <string name="map_preview">Map Preview</string>
    <string name="tip_image">Tip Image</string>
    <string name="add_tip_icon">Add Tip</string>
    <string name="nearby_dog_parks">Nearby Dog Parks</string>
    <string name="what_s_coming_up">What\'s Coming Up</string>
    <string name="healthy_dog_happy_life">Healthy Dog, Happy Life</string>
    <string name="select_a_dog">Select a dog</string>
    <string name="select_a_dog_title">Select a dog</string>
    <string name="appointment_title">Appointment title</string>
    <string name="check_up_with_dr_jones">Dr. Jones</string>
    <string name="select_a_date">Select a date</string>
    <string name="date">Date</string>
    <string name="clinic_adress">Clinic Adress</string>
    <string name="veterinarian_name">Veterinarian name</string>
    <string name="_124_conch_street_bikini_bottom">124 Conch Street, Bikini Bottom</string>
    <string name="reminder">Reminder</string>
    <string name="_5_minutes_before">5 minutes before</string>
    <string name="additional_notes">Additional notes</string>
    <string name="add_additional_notes">Add additional notes</string>
    <string name="cancel">Cancel</string>
    <string name="select_a_file">Select a file</string>
    <string name="upcoming">Upcoming</string>
    <string name="past">Past</string>
    <string name="appointments">Appointments</string>
    <string name="edit_image">Edit image</string>
    <string name="dog_breed">Breed</string>
    <string name="edit_profile">Edit profile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dog_park">Dog Park</string>
    <string name="select_dogs_dialog">Select dogs to show in the park</string>


    <string name="article1_topic">Feeding Your Dog</string>
    <string name="article1_name">How Many Times a Day Should a Dog Eat?</string>
    <string name="article1_reading_time">2-4 minutes</string>

    <string name="article2_topic">Getting a Dog</string>
    <string name="article2_name">Should You Give a Dog as a Gift?</string>
    <string name="article2_reading_time">2-4 minutes</string>

    <string name="article3_topic">Dog Health</string>
    <string name="article3_name">What to Do if Your Dog Has Dry Skin</string>
    <string name="article3_reading_time">1-2 minutes</string>

    <string name="article4_topic">Feeding Your Dog, Puppies</string>
    <string name="article4_name">Your Puppy\'s Diet and Nutritional Needs</string>
    <string name="article4_reading_time">2-4 minutes</string>

    <string name="article5_name">What\'s Causing My Puppy\'s Upset Stomach?</string>
    <string name="article5_reading_time">2-4 minutes</string>

    <string name="article6_name">Why Do Dogs Have Itchy Ears?</string>
    <string name="article6_reading_time">1-2 minutes</string>

    <string name="article7_name">Puppy Training: How and When Train a Puppy</string>
    <string name="article7_reading_time">2-4 minutes</string>

    <string name="article8_name">How Often to Feed a Puppy?</string>
    <string name="article8_reading_time">2-4 minutes</string>

    <string name="recommended_articles">Recommended Articles</string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


    <string name="feeds_title">Daily Feeding Log</string>
    <string name="fixed_feeds_title">Fixed Feeding Times</string>
    <string name="no_fixed_feeds_message">You haven\'t set any fixed feeding times yet.</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZGFub25vMjIwIiwiYSI6ImNtYnNub3RvbjBvOGwya3NmcDFyZ3RreGMifQ.ghGSONCRdQf9K4Cxphmf_A</string>

</resources>